# Hercules

./: .gitignore  .just.sh  .justfile  ROADMAP.md  go.mod  go.sum  main.go  package-lock.json  package.json  pyproject.toml  scrape.js  wiki.ts
.just/: go.conf  py.conf  pyinstall.sh
Script/: pubmed_scraping.py
arch/source/: scimagojrDB.csv.idx
cmd/: completion.go  identity.go  pubmed.go  root.go
hercules/: __init__.py  __main__.py  cli.py  config.py  connect.py  dbutil.py  pubmed.py  schema.sql  setup.sql  types.py
src/: page.py  publication.py  publication_plot.R  publication_plot.jl  pubmed_scraping.py  todo.md
src/utils/: pageTurner.py  publicationCollector.py
