[project]
name = "hercules"
dynamic = ["version"]
description = "Hercules will perform all the labours as commanded."
readme = "README.rst"
authors = [
  {name = "Daniel Rivas", email = "danielrivasmd@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GPL3 License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
  "Topic :: Utilities",
]
dependencies = [
  "click>=3.2",
  "selenium>=4.18",
]

[project.urls]
repository = "https://github.com/DanielRivasMD/Hercules"

[project.scripts]
hercules = "hercules.cli:main_hercules"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.ruff]
select = ["E", "F", "W", "I", "B0", "UP", "C4"]
ignore = ["B008"]
line-length = 100
target-version = "py38"
# BUG: not working exclude
exclude = [
  "arch",
  "src"
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
]

[tool.mypy]
ignore_missing_imports = true
